MDEV-25912 wsrep does not identify  checksummed events correctly

For GTID consistenty, GTID events was artificialy added before
replication happned. This event should not contain CHECKSUM calculated.